Fixed responsive design on mobile version

--- a/src/app/merch-page/merch-banner/merch-banner.component.scss
+++ b/src/app/merch-page/merch-banner/merch-banner.component.scss
@@ -67,7 +67,7 @@
       @media screen and (max-device-width: $tablet-size) and (min-device-width: $mobile-size) {
       }
       @media screen and (max-device-width: $mobile-size) {
-        width: 344px;
+        width: 324px;
         margin: 0 auto 59px auto;
       }
       #text-title {
